C_grammar.output
Terminals which are not used

   RANGE
   ERROR
   DEBUG


State 135 conflicts: 1 shift/reduce
State 342 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 translation_unit: external_declaration
    2                 | translation_unit external_declaration

    3 external_declaration: function_definition
    4                     | declaration

    5 function_definition: declarator compound_statement
    6                    | declarator declaration_list compound_statement
    7                    | declaration_specifiers declarator compound_statement
    8                    | declaration_specifiers declarator declaration_list compound_statement

    9 declaration: declaration_specifiers SEMI
   10            | declaration_specifiers init_declarator_list SEMI

   11 declaration_list: declaration
   12                 | declaration_list declaration

   13 declaration_specifiers: storage_class_specifier
   14                       | storage_class_specifier declaration_specifiers
   15                       | type_specifier
   16                       | type_specifier declaration_specifiers
   17                       | type_qualifier
   18                       | type_qualifier declaration_specifiers

   19 storage_class_specifier: AUTO
   20                        | REGISTER
   21                        | STATIC
   22                        | EXTERN
   23                        | TYPEDEF

   24 type_specifier: VOID
   25               | CHAR
   26               | SHORT
   27               | INT
   28               | LONG
   29               | FLOAT
   30               | DOUBLE
   31               | SIGNED
   32               | UNSIGNED
   33               | struct_or_union_specifier
   34               | enum_specifier
   35               | TYPEDEF_NAME

   36 type_qualifier: CONST
   37               | VOLATILE

   38 struct_or_union_specifier: struct_or_union identifier CURLYOPEN struct_declaration_list CURLYCLOSE
   39                          | struct_or_union CURLYOPEN struct_declaration_list CURLYCLOSE
   40                          | struct_or_union identifier

   41 struct_or_union: STRUCT
   42                | UNION

   43 struct_declaration_list: struct_declaration
   44                        | struct_declaration_list struct_declaration

   45 init_declarator_list: init_declarator
   46                     | init_declarator_list COMMA init_declarator

   47 init_declarator: declarator
   48                | declarator EQUALS initializer

   49 struct_declaration: specifier_qualifier_list struct_declarator_list SEMI

   50 specifier_qualifier_list: type_specifier
   51                         | type_specifier specifier_qualifier_list
   52                         | type_qualifier
   53                         | type_qualifier specifier_qualifier_list

   54 struct_declarator_list: struct_declarator
   55                       | struct_declarator_list COMMA struct_declarator

   56 struct_declarator: declarator
   57                  | COLON constant_expression
   58                  | declarator COLON constant_expression

   59 enum_specifier: ENUM CURLYOPEN enumerator_list CURLYCLOSE
   60               | ENUM identifier CURLYOPEN enumerator_list CURLYCLOSE
   61               | ENUM identifier

   62 enumerator_list: enumerator
   63                | enumerator_list COMMA enumerator

   64 enumerator: identifier
   65           | identifier EQUALS constant_expression

   66 declarator: direct_declarator
   67           | pointer direct_declarator

   68 direct_declarator: identifier
   69                  | OPEN declarator CLOSE
   70                  | direct_declarator BRACKETOPEN BRACKETCLOSE
   71                  | direct_declarator BRACKETOPEN constant_expression BRACKETCLOSE
   72                  | direct_declarator OPEN CLOSE
   73                  | direct_declarator OPEN parameter_type_list CLOSE
   74                  | direct_declarator OPEN identifier_list CLOSE

   75 pointer: STAR
   76        | STAR type_qualifier_list
   77        | STAR pointer
   78        | STAR type_qualifier_list pointer

   79 type_qualifier_list: type_qualifier
   80                    | type_qualifier_list type_qualifier

   81 parameter_type_list: parameter_list
   82                    | parameter_list COMMA ELIPSIS

   83 parameter_list: parameter_declaration
   84               | parameter_list COMMA parameter_declaration

   85 parameter_declaration: declaration_specifiers declarator
   86                      | declaration_specifiers
   87                      | declaration_specifiers abstract_declarator

   88 identifier_list: identifier
   89                | identifier_list COMMA identifier

   90 initializer: assignment_expression
   91            | CURLYOPEN initializer_list CURLYCLOSE
   92            | CURLYOPEN initializer_list COMMA CURLYCLOSE

   93 initializer_list: initializer
   94                 | initializer_list COMMA initializer

   95 type_name: specifier_qualifier_list
   96          | specifier_qualifier_list abstract_declarator

   97 abstract_declarator: pointer
   98                    | direct_abstract_declarator
   99                    | pointer direct_abstract_declarator

  100 direct_abstract_declarator: OPEN abstract_declarator CLOSE
  101                           | BRACKETOPEN BRACKETCLOSE
  102                           | BRACKETOPEN constant_expression BRACKETCLOSE
  103                           | direct_abstract_declarator BRACKETOPEN BRACKETCLOSE
  104                           | direct_abstract_declarator BRACKETOPEN constant_expression BRACKETCLOSE
  105                           | OPEN CLOSE
  106                           | OPEN parameter_type_list CLOSE
  107                           | direct_abstract_declarator OPEN CLOSE
  108                           | direct_abstract_declarator OPEN parameter_type_list CLOSE

  109 statement: labeled_statement
  110          | compound_statement
  111          | expression_statement
  112          | selection_statement
  113          | iteration_statement
  114          | jump_statement

  115 labeled_statement: identifier COLON statement
  116                  | CASE constant_expression COLON statement
  117                  | DEFAULT COLON statement

  118 expression_statement: SEMI
  119                     | expression SEMI

  120 compound_statement: CURLYOPEN CURLYCLOSE
  121                   | CURLYOPEN statement_list CURLYCLOSE
  122                   | CURLYOPEN declaration_list CURLYCLOSE
  123                   | CURLYOPEN declaration_list statement_list CURLYCLOSE

  124 statement_list: statement
  125               | statement_list statement

  126 selection_statement: IF OPEN expression CLOSE statement
  127                    | IF OPEN expression CLOSE statement ELSE statement
  128                    | SWITCH OPEN expression CLOSE statement

  129 iteration_statement: WHILE OPEN expression CLOSE statement
  130                    | DO statement WHILE OPEN expression CLOSE SEMI
  131                    | FOR OPEN SEMI SEMI CLOSE statement
  132                    | FOR OPEN SEMI SEMI expression CLOSE statement
  133                    | FOR OPEN SEMI expression SEMI CLOSE statement
  134                    | FOR OPEN SEMI expression SEMI expression CLOSE statement
  135                    | FOR OPEN expression SEMI SEMI CLOSE statement
  136                    | FOR OPEN expression SEMI SEMI expression CLOSE statement
  137                    | FOR OPEN expression SEMI expression SEMI CLOSE statement
  138                    | FOR OPEN expression SEMI expression SEMI expression CLOSE statement

  139 jump_statement: GOTO identifier SEMI
  140               | CONTINUE SEMI
  141               | BREAK SEMI
  142               | RETURN SEMI
  143               | RETURN expression SEMI

  144 expression: assignment_expression
  145           | expression COMMA assignment_expression

  146 assignment_expression: conditional_expression
  147                      | unary_expression assignment_operator assignment_expression

  148 assignment_operator: EQUALS
  149                    | MUL_ASSIGN
  150                    | DIV_ASSIGN
  151                    | MOD_ASSIGN
  152                    | ADD_ASSIGN
  153                    | SUB_ASSIGN
  154                    | LEFT_ASSIGN
  155                    | RIGHT_ASSIGN
  156                    | AND_ASSIGN
  157                    | XOR_ASSIGN
  158                    | OR_ASSIGN

  159 conditional_expression: logical_or_expression
  160                       | logical_or_expression QUESTION expression COLON conditional_expression

  161 constant_expression: conditional_expression

  162 logical_or_expression: logical_and_expression
  163                      | logical_or_expression OR_OP logical_and_expression

  164 logical_and_expression: inclusive_or_expression
  165                       | logical_and_expression AND_OP inclusive_or_expression

  166 inclusive_or_expression: exclusive_or_expression
  167                        | inclusive_or_expression BAR exclusive_or_expression

  168 exclusive_or_expression: and_expression
  169                        | exclusive_or_expression CARROT and_expression

  170 and_expression: equality_expression
  171               | and_expression AMP equality_expression

  172 equality_expression: relational_expression
  173                    | equality_expression EQ_OP relational_expression
  174                    | equality_expression NE_OP relational_expression

  175 relational_expression: shift_expression
  176                      | relational_expression LESS_OP shift_expression
  177                      | relational_expression GREAT_OP shift_expression
  178                      | relational_expression LE_OP shift_expression
  179                      | relational_expression GE_OP shift_expression

  180 shift_expression: additive_expression
  181                 | shift_expression LEFT_OP additive_expression
  182                 | shift_expression RIGHT_OP additive_expression

  183 additive_expression: multiplicative_expression
  184                    | additive_expression PLUS multiplicative_expression
  185                    | additive_expression MINUS multiplicative_expression

  186 multiplicative_expression: cast_expression
  187                          | multiplicative_expression STAR cast_expression
  188                          | multiplicative_expression FORSLASH cast_expression
  189                          | multiplicative_expression PERCENT cast_expression

  190 cast_expression: unary_expression
  191                | OPEN type_name CLOSE cast_expression

  192 unary_expression: postfix_expression
  193                 | INC_OP unary_expression
  194                 | DEC_OP unary_expression
  195                 | unary_operator cast_expression
  196                 | SIZEOF unary_expression
  197                 | SIZEOF OPEN type_name CLOSE

  198 unary_operator: AMP
  199               | STAR
  200               | PLUS
  201               | MINUS
  202               | TILDA
  203               | BANG

  204 postfix_expression: primary_expression
  205                   | postfix_expression BRACKETOPEN expression BRACKETCLOSE
  206                   | postfix_expression OPEN CLOSE
  207                   | postfix_expression OPEN argument_expression_list CLOSE
  208                   | postfix_expression PERIOD identifier
  209                   | postfix_expression STAR identifier
  210                   | postfix_expression INC_OP
  211                   | postfix_expression DEC_OP

  212 primary_expression: identifier
  213                   | constant
  214                   | string
  215                   | OPEN expression CLOSE

  216 argument_expression_list: assignment_expression
  217                         | argument_expression_list COMMA assignment_expression

  218 constant: INTEGER_CONSTANT
  219         | CHARACTER_CONSTANT
  220         | FLOATING_CONSTANT
  221         | ENUMERATION_CONSTANT

  222 string: STRING_LITERAL

  223 identifier: IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
error (256)
IDENTIFIER (258) 223
INTEGER_CONSTANT (259) 218
FLOATING_CONSTANT (260) 220
CHARACTER_CONSTANT (261) 219
ENUMERATION_CONSTANT (262) 221
STRING_LITERAL (263) 222
SIZEOF (264) 196 197
INC_OP (265) 193 210
DEC_OP (266) 194 211
LEFT_OP (267) 181
RIGHT_OP (268) 182
LE_OP (269) 178
GE_OP (270) 179
EQ_OP (271) 173
NE_OP (272) 174
AND_OP (273) 165
OR_OP (274) 163
MUL_ASSIGN (275) 149
DIV_ASSIGN (276) 150
MOD_ASSIGN (277) 151
ADD_ASSIGN (278) 152
SUB_ASSIGN (279) 153
LEFT_ASSIGN (280) 154
RIGHT_ASSIGN (281) 155
AND_ASSIGN (282) 156
XOR_ASSIGN (283) 157
OR_ASSIGN (284) 158
TYPEDEF_NAME (285) 35
SEMI (286) 9 10 49 118 119 130 131 132 133 134 135 136 137 138 139
    140 141 142 143
COLON (287) 57 58 115 116 117 160
CURLYOPEN (288) 38 39 59 60 91 92 120 121 122 123
CURLYCLOSE (289) 38 39 59 60 91 92 120 121 122 123
BRACKETOPEN (290) 70 71 101 102 103 104 205
BRACKETCLOSE (291) 70 71 101 102 103 104 205
COMMA (292) 46 55 63 82 84 89 92 94 145 217
PERIOD (293) 208
EQUALS (294) 48 65 148
OPEN (295) 69 72 73 74 100 105 106 107 108 126 127 128 129 130 131
    132 133 134 135 136 137 138 191 197 206 207 215
CLOSE (296) 69 72 73 74 100 105 106 107 108 126 127 128 129 130 131
    132 133 134 135 136 137 138 191 197 206 207 215
STAR (297) 75 76 77 78 187 199 209
QUESTION (298) 160
BAR (299) 167
CARROT (300) 169
AMP (301) 171 198
LESS_OP (302) 176
GREAT_OP (303) 177
PLUS (304) 184 200
MINUS (305) 185 201
FORSLASH (306) 188
PERCENT (307) 189
BANG (308) 203
TILDA (309) 202
TYPEDEF (310) 23
EXTERN (311) 22
STATIC (312) 21
AUTO (313) 19
REGISTER (314) 20
CHAR (315) 25
SHORT (316) 26
INT (317) 27
LONG (318) 28
SIGNED (319) 31
UNSIGNED (320) 32
FLOAT (321) 29
DOUBLE (322) 30
CONST (323) 36
VOLATILE (324) 37
VOID (325) 24
STRUCT (326) 41
UNION (327) 42
ENUM (328) 59 60 61
ELIPSIS (329) 82
RANGE (330)
CASE (331) 116
DEFAULT (332) 117
IF (333) 126 127
ELSE (334) 127
SWITCH (335) 128
WHILE (336) 129 130
DO (337) 130
FOR (338) 131 132 133 134 135 136 137 138
GOTO (339) 139
CONTINUE (340) 140
BREAK (341) 141
RETURN (342) 142 143
ERROR (343)
DEBUG (344)


Nonterminals, with rules where they appear

$accept (90)
    on left: 0
translation_unit (91)
    on left: 1 2, on right: 0 2
external_declaration (92)
    on left: 3 4, on right: 1 2
function_definition (93)
    on left: 5 6 7 8, on right: 3
declaration (94)
    on left: 9 10, on right: 4 11 12
declaration_list (95)
    on left: 11 12, on right: 6 8 12 122 123
declaration_specifiers (96)
    on left: 13 14 15 16 17 18, on right: 7 8 9 10 14 16 18 85 86 87
storage_class_specifier (97)
    on left: 19 20 21 22 23, on right: 13 14
type_specifier (98)
    on left: 24 25 26 27 28 29 30 31 32 33 34 35, on right: 15 16 50
    51
type_qualifier (99)
    on left: 36 37, on right: 17 18 52 53 79 80
struct_or_union_specifier (100)
    on left: 38 39 40, on right: 33
struct_or_union (101)
    on left: 41 42, on right: 38 39 40
struct_declaration_list (102)
    on left: 43 44, on right: 38 39 44
init_declarator_list (103)
    on left: 45 46, on right: 10 46
init_declarator (104)
    on left: 47 48, on right: 45 46
struct_declaration (105)
    on left: 49, on right: 43 44
specifier_qualifier_list (106)
    on left: 50 51 52 53, on right: 49 51 53 95 96
struct_declarator_list (107)
    on left: 54 55, on right: 49 55
struct_declarator (108)
    on left: 56 57 58, on right: 54 55
enum_specifier (109)
    on left: 59 60 61, on right: 34
enumerator_list (110)
    on left: 62 63, on right: 59 60 63
enumerator (111)
    on left: 64 65, on right: 62 63
declarator (112)
    on left: 66 67, on right: 5 6 7 8 47 48 56 58 69 85
direct_declarator (113)
    on left: 68 69 70 71 72 73 74, on right: 66 67 70 71 72 73 74
pointer (114)
    on left: 75 76 77 78, on right: 67 77 78 97 99
type_qualifier_list (115)
    on left: 79 80, on right: 76 78 80
parameter_type_list (116)
    on left: 81 82, on right: 73 106 108
parameter_list (117)
    on left: 83 84, on right: 81 82 84
parameter_declaration (118)
    on left: 85 86 87, on right: 83 84
identifier_list (119)
    on left: 88 89, on right: 74 89
initializer (120)
    on left: 90 91 92, on right: 48 93 94
initializer_list (121)
    on left: 93 94, on right: 91 92 94
type_name (122)
    on left: 95 96, on right: 191 197
abstract_declarator (123)
    on left: 97 98 99, on right: 87 96 100
direct_abstract_declarator (124)
    on left: 100 101 102 103 104 105 106 107 108, on right: 98 99 103
    104 107 108
statement (125)
    on left: 109 110 111 112 113 114, on right: 115 116 117 124 125
    126 127 128 129 130 131 132 133 134 135 136 137 138
labeled_statement (126)
    on left: 115 116 117, on right: 109
expression_statement (127)
    on left: 118 119, on right: 111
compound_statement (128)
    on left: 120 121 122 123, on right: 5 6 7 8 110
statement_list (129)
    on left: 124 125, on right: 121 123 125
selection_statement (130)
    on left: 126 127 128, on right: 112
iteration_statement (131)
    on left: 129 130 131 132 133 134 135 136 137 138,
    on right: 113
jump_statement (132)
    on left: 139 140 141 142 143, on right: 114
expression (133)
    on left: 144 145, on right: 119 126 127 128 129 130 132 133 134
    135 136 137 138 143 145 160 205 215
assignment_expression (134)
    on left: 146 147, on right: 90 144 145 147 216 217
assignment_operator (135)
    on left: 148 149 150 151 152 153 154 155 156 157 158,
    on right: 147
conditional_expression (136)
    on left: 159 160, on right: 146 160 161
constant_expression (137)
    on left: 161, on right: 57 58 65 71 102 104 116
logical_or_expression (138)
    on left: 162 163, on right: 159 160 163
logical_and_expression (139)
    on left: 164 165, on right: 162 163 165
inclusive_or_expression (140)
    on left: 166 167, on right: 164 165 167
exclusive_or_expression (141)
    on left: 168 169, on right: 166 167 169
and_expression (142)
    on left: 170 171, on right: 168 169 171
equality_expression (143)
    on left: 172 173 174, on right: 170 171 173 174
relational_expression (144)
    on left: 175 176 177 178 179, on right: 172 173 174 176 177 178
    179
shift_expression (145)
    on left: 180 181 182, on right: 175 176 177 178 179 181 182
additive_expression (146)
    on left: 183 184 185, on right: 180 181 182 184 185
multiplicative_expression (147)
    on left: 186 187 188 189, on right: 183 184 185 187 188 189
cast_expression (148)
    on left: 190 191, on right: 186 187 188 189 191 195
unary_expression (149)
    on left: 192 193 194 195 196 197, on right: 147 190 193 194 196
unary_operator (150)
    on left: 198 199 200 201 202 203, on right: 195
postfix_expression (151)
    on left: 204 205 206 207 208 209 210 211, on right: 192 205 206
    207 208 209 210 211
primary_expression (152)
    on left: 212 213 214 215, on right: 204
argument_expression_list (153)
    on left: 216 217, on right: 207 217
constant (154)
    on left: 218 219 220 221, on right: 213
string (155)
    on left: 222, on right: 214
identifier (156)
    on left: 223, on right: 38 40 60 61 64 65 68 88 89 115 139 208
    209 212


state 0

    0 $accept: . translation_unit $end

    IDENTIFIER    shift, and go to state 1
    TYPEDEF_NAME  shift, and go to state 2
    OPEN          shift, and go to state 3
    STAR          shift, and go to state 4
    TYPEDEF       shift, and go to state 5
    EXTERN        shift, and go to state 6
    STATIC        shift, and go to state 7
    AUTO          shift, and go to state 8
    REGISTER      shift, and go to state 9
    CHAR          shift, and go to state 10
    SHORT         shift, and go to state 11
    INT           shift, and go to state 12
    LONG          shift, and go to state 13
    SIGNED        shift, and go to state 14
    UNSIGNED      shift, and go to state 15
    FLOAT         shift, and go to state 16
    DOUBLE        shift, and go to state 17
    CONST         shift, and go to state 18
    VOLATILE      shift, and go to state 19
    VOID          shift, and go to state 20
    STRUCT        shift, and go to state 21
    UNION         shift, and go to state 22
    ENUM          shift, and go to state 23

    translation_unit           go to state 24
    external_declaration       go to state 25
    function_definition        go to state 26
    declaration                go to state 27
    declaration_specifiers     go to state 28
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    type_qualifier             go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33
    enum_specifier             go to state 34
    declarator                 go to state 35
    direct_declarator          go to state 36
    pointer                    go to state 37
    identifier                 go to state 38


state 1

  223 identifier: IDENTIFIER .

    $default  reduce using rule 223 (identifier)


state 2

   35 type_specifier: TYPEDEF_NAME .

    $default  reduce using rule 35 (type_specifier)


state 3

   69 direct_declarator: OPEN . declarator CLOSE

    IDENTIFIER  shift, and go to state 1
    OPEN        shift, and go to state 3
    STAR        shift, and go to state 4

    declarator         go to state 39
    direct_declarator  go to state 36
    pointer            go to state 37
    identifier         go to state 38


state 4

   75 pointer: STAR .
   76        | STAR . type_qualifier_list
   77        | STAR . pointer
   78        | STAR . type_qualifier_list pointer

    STAR      shift, and go to state 4
    CONST     shift, and go to state 18
    VOLATILE  shift, and go to state 19

    $default  reduce using rule 75 (pointer)

    type_qualifier       go to state 40
    pointer              go to state 41
    type_qualifier_list  go to state 42


state 5

   23 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 23 (storage_class_specifier)


state 6

   22 storage_class_specifier: EXTERN .

    $default  reduce using rule 22 (storage_class_specifier)


state 7

   21 storage_class_specifier: STATIC .

    $default  reduce using rule 21 (storage_class_specifier)


state 8

   19 storage_class_specifier: AUTO .

    $default  reduce using rule 19 (storage_class_specifier)


state 9

   20 storage_class_specifier: REGISTER .

    $default  reduce using rule 20 (storage_class_specifier)


state 10

   25 type_specifier: CHAR .

    $default  reduce using rule 25 (type_specifier)


state 11

   26 type_specifier: SHORT .

    $default  reduce using rule 26 (type_specifier)


state 12

   27 type_specifier: INT .

    $default  reduce using rule 27 (type_specifier)


state 13

   28 type_specifier: LONG .

    $default  reduce using rule 28 (type_specifier)


state 14

   31 type_specifier: SIGNED .

    $default  reduce using rule 31 (type_specifier)


state 15

   32 type_specifier: UNSIGNED .

    $default  reduce using rule 32 (type_specifier)


state 16

   29 type_specifier: FLOAT .

    $default  reduce using rule 29 (type_specifier)


state 17

   30 type_specifier: DOUBLE .

    $default  reduce using rule 30 (type_specifier)


state 18

   36 type_qualifier: CONST .

    $default  reduce using rule 36 (type_qualifier)


state 19

   37 type_qualifier: VOLATILE .

    $default  reduce using rule 37 (type_qualifier)


state 20

   24 type_specifier: VOID .

    $default  reduce using rule 24 (type_specifier)


state 21

   41 struct_or_union: STRUCT .

    $default  reduce using rule 41 (struct_or_union)


state 22

   42 struct_or_union: UNION .

    $default  reduce using rule 42 (struct_or_union)


state 23

   59 enum_specifier: ENUM . CURLYOPEN enumerator_list CURLYCLOSE
   60               | ENUM . identifier CURLYOPEN enumerator_list CURLYCLOSE
   61               | ENUM . identifier

    IDENTIFIER  shift, and go to state 1
    CURLYOPEN   shift, and go to state 43

    identifier  go to state 44


state 24

    0 $accept: translation_unit . $end
    2 translation_unit: translation_unit . external_declaration

    $end          shift, and go to state 45
    IDENTIFIER    shift, and go to state 1
    TYPEDEF_NAME  shift, and go to state 2
    OPEN          shift, and go to state 3
    STAR          shift, and go to state 4
    TYPEDEF       shift, and go to state 5
    EXTERN        shift, and go to state 6
    STATIC        shift, and go to state 7
    AUTO          shift, and go to state 8
    REGISTER      shift, and go to state 9
    CHAR          shift, and go to state 10
    SHORT         shift, and go to state 11
    INT           shift, and go to state 12
    LONG          shift, and go to state 13
    SIGNED        shift, and go to state 14
    UNSIGNED      shift, and go to state 15
    FLOAT         shift, and go to state 16
    DOUBLE        shift, and go to state 17
    CONST         shift, and go to state 18
    VOLATILE      shift, and go to state 19
    VOID          shift, and go to state 20
    STRUCT        shift, and go to state 21
    UNION         shift, and go to state 22
    ENUM          shift, and go to state 23

    external_declaration       go to state 46
    function_definition        go to state 26
    declaration                go to state 27
    declaration_specifiers     go to state 28
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    type_qualifier             go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33
    enum_specifier             go to state 34
    declarator                 go to state 35
    direct_declarator          go to state 36
    pointer                    go to state 37
    identifier                 go to state 38


state 25

    1 translation_unit: external_declaration .

    $default  reduce using rule 1 (translation_unit)


state 26

    3 external_declaration: function_definition .

    $default  reduce using rule 3 (external_declaration)


state 27

    4 external_declaration: declaration .

    $default  reduce using rule 4 (external_declaration)


state 28

    7 function_definition: declaration_specifiers . declarator compound_statement
    8                    | declaration_specifiers . declarator declaration_list compound_statement
    9 declaration: declaration_specifiers . SEMI
   10            | declaration_specifiers . init_declarator_list SEMI

    IDENTIFIER  shift, and go to state 1
    SEMI        shift, and go to state 47
    OPEN        shift, and go to state 3
    STAR        shift, and go to state 4

    init_declarator_list  go to state 48
    init_declarator       go to state 49
    declarator            go to state 50
    direct_declarator     go to state 36
    pointer               go to state 37
    identifier            go to state 38


state 29

   13 declaration_specifiers: storage_class_specifier .
   14                       | storage_class_specifier . declaration_specifiers

    TYPEDEF_NAME  shift, and go to state 2
    TYPEDEF       shift, and go to state 5
    EXTERN        shift, and go to state 6
    STATIC        shift, and go to state 7
    AUTO          shift, and go to state 8
    REGISTER      shift, and go to state 9
    CHAR          shift, and go to state 10
    SHORT         shift, and go to state 11
    INT           shift, and go to state 12
    LONG          shift, and go to state 13
    SIGNED        shift, and go to state 14
    UNSIGNED      shift, and go to state 15
    FLOAT         shift, and go to state 16
    DOUBLE        shift, and go to state 17
    CONST         shift, and go to state 18
    VOLATILE      shift, and go to state 19
    VOID          shift, and go to state 20
    STRUCT        shift, and go to state 21
    UNION         shift, and go to state 22
    ENUM          shift, and go to state 23

    $default  reduce using rule 13 (declaration_specifiers)

    declaration_specifiers     go to state 51
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    type_qualifier             go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33
    enum_specifier             go to state 34


state 30

   15 declaration_specifiers: type_specifier .
   16                       | type_specifier . declaration_specifiers

    TYPEDEF_NAME  shift, and go to state 2
    TYPEDEF       shift, and go to state 5
    EXTERN        shift, and go to state 6
    STATIC        shift, and go to state 7
    AUTO          shift, and go to state 8
    REGISTER      shift, and go to state 9
    CHAR          shift, and go to state 10
    SHORT         shift, and go to state 11
    INT           shift, and go to state 12
    LONG          shift, and go to state 13
    SIGNED        shift, and go to state 14
    UNSIGNED      shift, and go to state 15
    FLOAT         shift, and go to state 16
    DOUBLE        shift, and go to state 17
    CONST         shift, and go to state 18
    VOLATILE      shift, and go to state 19
    VOID          shift, and go to state 20
    STRUCT        shift, and go to state 21
    UNION         shift, and go to state 22
    ENUM          shift, and go to state 23

    $default  reduce using rule 15 (declaration_specifiers)

    declaration_specifiers     go to state 52
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    type_qualifier             go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33
    enum_specifier             go to state 34


state 31

   17 declaration_specifiers: type_qualifier .
   18                       | type_qualifier . declaration_specifiers

    TYPEDEF_NAME  shift, and go to state 2
    TYPEDEF       shift, and go to state 5
    EXTERN        shift, and go to state 6
    STATIC        shift, and go to state 7
    AUTO          shift, and go to state 8
    REGISTER      shift, and go to state 9
    CHAR          shift, and go to state 10
    SHORT         shift, and go to state 11
    INT           shift, and go to state 12
    LONG          shift, and go to state 13
    SIGNED        shift, and go to state 14
    UNSIGNED      shift, and go to state 15
    FLOAT         shift, and go to state 16
    DOUBLE        shift, and go to state 17
    CONST         shift, and go to state 18
    VOLATILE      shift, and go to state 19
    VOID          shift, and go to state 20
    STRUCT        shift, and go to state 21
    UNION         shift, and go to state 22
    ENUM          shift, and go to state 23

    $default  reduce using rule 17 (declaration_specifiers)

    declaration_specifiers     go to state 53
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    type_qualifier             go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33
    enum_specifier             go to state 34


state 32

   33 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 33 (type_specifier)


state 33

   38 struct_or_union_specifier: struct_or_union . identifier CURLYOPEN struct_declaration_list CURLYCLOSE
   39                          | struct_or_union . CURLYOPEN struct_declaration_list CURLYCLOSE
   40                          | struct_or_union . identifier

    IDENTIFIER  shift, and go to state 1
    CURLYOPEN   shift, and go to state 54

    identifier  go to state 55


state 34

   34 type_specifier: enum_specifier .

    $default  reduce using rule 34 (type_specifier)


state 35

    5 function_definition: declarator . compound_statement
    6                    | declarator . declaration_list compound_statement

    TYPEDEF_NAME  shift, and go to state 2
    CURLYOPEN     shift, and go to state 56
    TYPEDEF       shift, and go to state 5
    EXTERN        shift, and go to state 6
    STATIC        shift, and go to state 7
    AUTO          shift, and go to state 8
    REGISTER      shift, and go to state 9
    CHAR          shift, and go to state 10
    SHORT         shift, and go to state 11
    INT           shift, and go to state 12
    LONG          shift, and go to state 13
    SIGNED        shift, and go to state 14
    UNSIGNED      shift, and go to state 15
    FLOAT         shift, and go to state 16
    DOUBLE        shift, and go to state 17
    CONST         shift, and go to state 18
    VOLATILE      shift, and go to state 19
    VOID          shift, and go to state 20
    STRUCT        shift, and go to state 21
    UNION         shift, and go to state 22
    ENUM          shift, and go to state 23

    declaration                go to state 57
    declaration_list           go to state 58
    declaration_specifiers     go to state 59
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    type_qualifier             go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33
    enum_specifier             go to state 34
    compound_statement         go to state 60


state 36

   66 declarator: direct_declarator .
   70 direct_declarator: direct_declarator . BRACKETOPEN BRACKETCLOSE
   71                  | direct_declarator . BRACKETOPEN constant_expression BRACKETCLOSE
   72                  | direct_declarator . OPEN CLOSE
   73                  | direct_declarator . OPEN parameter_type_list CLOSE
   74                  | direct_declarator . OPEN identifier_list CLOSE

    BRACKETOPEN  shift, and go to state 61
    OPEN         shift, and go to state 62

    $default  reduce using rule 66 (declarator)


state 37

   67 declarator: pointer . direct_declarator

    IDENTIFIER  shift, and go to state 1
    OPEN        shift, and go to state 3

    direct_declarator  go to state 63
    identifier         go to state 38


state 38

   68 direct_declarator: identifier .

    $default  reduce using rule 68 (direct_declarator)


state 39

   69 direct_declarator: OPEN declarator . CLOSE

    CLOSE  shift, and go to state 64


state 40

   79 type_qualifier_list: type_qualifier .

    $default  reduce using rule 79 (type_qualifier_list)


state 41

   77 pointer: STAR pointer .

    $default  reduce using rule 77 (pointer)


state 42

   76 pointer: STAR type_qualifier_list .
   78        | STAR type_qualifier_list . pointer
   80 type_qualifier_list: type_qualifier_list . type_qualifier

    STAR      shift, and go to state 4
    CONST     shift, and go to state 18
    VOLATILE  shift, and go to state 19

    $default  reduce using rule 76 (pointer)

    type_qualifier  go to state 65
    pointer         go to state 66


state 43

   59 enum_specifier: ENUM CURLYOPEN . enumerator_list CURLYCLOSE

    IDENTIFIER  shift, and go to state 1

    enumerator_list  go to state 67
    enumerator       go to state 68
    identifier       go to state 69


state 44

   60 enum_specifier: ENUM identifier . CURLYOPEN enumerator_list CURLYCLOSE
   61               | ENUM identifier .

    CURLYOPEN  shift, and go to state 70

    $default  reduce using rule 61 (enum_specifier)


state 45

    0 $accept: translation_unit $end .

    $default  accept


state 46

    2 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 2 (translation_unit)


state 47

    9 declaration: declaration_specifiers SEMI .

    $default  reduce using rule 9 (declaration)


state 48

   10 declaration: declaration_specifiers init_declarator_list . SEMI
   46 init_declarator_list: init_declarator_list . COMMA init_declarator

    SEMI   shift, and go to state 71
    COMMA  shift, and go to state 72


state 49

   45 init_declarator_list: init_declarator .

    $default  reduce using rule 45 (init_declarator_list)


state 50

    7 function_definition: declaration_specifiers declarator . compound_statement
    8                    | declaration_specifiers declarator . declaration_list compound_statement
   47 init_declarator: declarator .
   48                | declarator . EQUALS initializer

    TYPEDEF_NAME  shift, and go to state 2
    CURLYOPEN     shift, and go to state 56
    EQUALS        shift, and go to state 73
    TYPEDEF       shift, and go to state 5
    EXTERN        shift, and go to state 6
    STATIC        shift, and go to state 7
    AUTO          shift, and go to state 8
    REGISTER      shift, and go to state 9
    CHAR          shift, and go to state 10
    SHORT         shift, and go to state 11
    INT           shift, and go to state 12
    LONG          shift, and go to state 13
    SIGNED        shift, and go to state 14
    UNSIGNED      shift, and go to state 15
    FLOAT         shift, and go to state 16
    DOUBLE        shift, and go to state 17
    CONST         shift, and go to state 18
    VOLATILE      shift, and go to state 19
    VOID          shift, and go to state 20
    STRUCT        shift, and go to state 21
    UNION         shift, and go to state 22
    ENUM          shift, and go to state 23

    $default  reduce using rule 47 (init_declarator)
